feat: initialize backend infrastructure with core entities, security configuration, and CRUD controllers